--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <span>Lead Funnels</span>
       <span>Creative Testing</span>
       <span>Budget Scaling</span>
-      <span>CPL / CPA / FTD</span>
+      <span>CPL / CPA / FTD/ CPI /</span>
     </div>
 
     <h2>Experience Snapshot</h2>
@@ -99,13 +99,14 @@
     </ul>
 
     <h2>How I Work</h2>
-  <p>Research → Build → Test → Optimize → Scale. I focus on clean account structure, disciplined testing, and data-backed decisions that compound performance over time.</p>
+  <p>Research → Build → Test → Optimize → Scale. 
+    I focus on clean account structure, disciplined testing, and data-backed decisions that compound performance over time.</p>
 
 
     <h2>Contact</h2>
     <p class="contact">
       Email: <a href="mailto:maria_e_greck89@hotmail.com">maria_e_greck89@hotmail.com</a><br>
-      LinkedIn: <a href="https://www.linkedin.com" target="_blank">View Profile</a>
+      LinkedIn: <a href="https://www.linkedin.com/in/maria-gregory-mediabuyer4/" target="_blank">View Profile</a>
     </p>
 
     <footer>
