--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f8f9fb;
+      background: #95b2b2;
       color: #1f2933;
       line-height: 1.6;
     }
