--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #95b2b2;
-      color: #1f2933;
+      background: #f8f9fb;
+      color: #95b2b2;
       line-height: 1.6;
     }
     .container {
