--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       padding: 0;
       background: #f8f9fb;
-      color: #95b2b2;
+      color: #1f2933;
       line-height: 1.6;
     }
     .container {
